added register page

--- a/.env.lacal
+++ b/.env.lacal
@@ -6,3 +6,11 @@
   VITE_appId=1:1071287174345:web:61d2f30090ff541729f918
 
   IMAGE_SECRET_API=21965f9e6615e823a5a0e7cdda268d95
+
+  
+  # apiKey: "AIzaSyD5eab7P2Ag88dQmfeVm5I1hDK7JnuIJFo",
+  # authDomain: "educational-assistance-9d346.firebaseapp.com",
+  # projectId: "educational-assistance-9d346",
+  # storageBucket: "educational-assistance-9d346.appspot.com",
+  # messagingSenderId: "1071287174345",
+  # appId: "1:1071287174345:web:61d2f30090ff541729f918"
